add styles for header

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/index.css" />
     <title>Title</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Blog</title>
 </head>
 <body>
+
+<header>
+    <div class="header-nav">
+        <div class="nav">
+            <img src="img/header/starter.png" alt="starter">
+        </div>
+
+        <div class="navigate">
+            <p>Blog</p>
+            <p>Newsletter</p>
+            <p>Twitter</p>
+        </div>
+    </div>
+</header>
+<main>
+    <section>
+        <div class="h-nav">
+        <h1>Hi there, I’m Ixartz👋</h1>
+        </div>
+    </section>
+</main>
+
+<footer>
+
+</footer>
 
 </body>
 </html>
