--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/index.css" />
     <title>Title</title>
     <link rel="stylesheet" href="css/styles.css" />
     <title>Blog</title>
@@ -23,9 +22,19 @@
 </header>
 <main>
     <section>
-        <div class="h-nav">
-        <h1>Hi there, I’m Ixartz👋</h1>
+        <div class="title-container">
+            <h1 class="title">Hi there, I’m Ixartz👋</h1>
         </div>
+    </section>
+
+<!--    Asstra Projects-->
+    <section>
+
+    </section>
+
+
+    <section>
+
     </section>
 </main>
 
