add styles for header

--- a/index.html
+++ b/index.html
@@ -23,13 +23,21 @@
 <main>
     <section>
         <div class="title-container">
-            <h1 class="title">Hi there, I’m Ixartz👋</h1>
+            <h1 class="title">Hi there, I’m <span class="title-consectetur">Ixartz</span>👋</h1>
         </div>
     </section>
 
 <!--    Asstra Projects-->
     <section>
-
+        <div class="title-p">
+            <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit.
+                Phasellus malesuada nisi tellus, non imperdiet nisi tempor at.
+                Lorem ipsum dolor sit amet, <span class="title-consectetur">consectetur</span> adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et <span class="title-consectetur">dolore</span>.</p>
+        </div>
+        <div class="western-img">
+            <img src="img/title/Western-Man.png" alt="Western-Man">
+        </div>
     </section>
 
 
