change styles for navigate

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </div>
 
         <div class="navigate">
-            <a href="#">Blog</a>
-            <a href="#">Newsletter</a>
-            <a href="#">Twitter</a>
+            <p>Blog</p>
+            <p>Newsletter</p>
+            <p>Twitter</p>
         </div>
     </div>
 </header>
