update: emplements for title

--- a/index.html
+++ b/index.html
@@ -27,14 +27,32 @@
         </div>
 
         <div class="title-p">
-            <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit.
-                Phasellus malesuada nisi tellus, non imperdiet nisi tempor at.
-                Lorem ipsum dolor sit amet, <span class="title-consectetur">consectetur</span> adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et <span class="title-consectetur">dolore</span>.</p>
+            <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit.</p>
+               <p>Phasellus malesuada nisi tellus, non imperdiet nisi tempor at.</p>
+               <p>Lorem ipsum dolor sit amet, <span class="title-consectetur">consectetur</span> adipiscing elit,</p>
+               <p>sed do eiusmod tempor incididunt ut labore et <span class="title-consectetur">dolore</span>.</p>
         </div>
         <div class="western-img">
             <img src="img/title/western-man.png" alt="Western-Man">
         </div>
+
+        <div class="twitter">
+            <img src="img/title/twitter.svg" alt="twitter">
+        </div>
+
+        <div class="facebook">
+            <img src="img/title/facebook.svg" alt="facebook">
+        </div>
+
+        <div class="linkedin">
+            <img src="img/title/linkedin.svg" alt="linkedin">
+       </div>
+
+       <div class="youtube">
+            <img src="img/title/youtube.svg" alt="youtube">
+        </div>
+
+
     </section>
 
 <!--    <section>-->
