change position icons in file
remove header patch

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
     <link rel="stylesheet" href="css/styles.css"/>
     <title>Blog</title>
 </head>
@@ -52,7 +51,6 @@
             <img src="img/title/youtube.svg" alt="youtube">
         </div>
 
-
     </section>
 
 <!--    <section>-->
@@ -76,10 +74,10 @@
         </div>
 
         <div class="footer-img__container">
-            <a href="https://github.com/"><img src="img/footer/github.svg" alt="github"></a>
-            <a href="http://facebook.com/"><img src="img/footer/facebook.svg" alt="facebook"></a>
-            <a href="https://twitter.com/"><img src="img/footer/twitter.svg" alt="twitter"></a>
-            <a href="https://linkedin.com/"><img src="img/footer/linkedin.svg" alt="linkedin"></a>
+            <a href="https://github.com/"><img src="icon/footer/github-icon.svg" alt="github"></a>
+            <a href="http://facebook.com/"><img src="icon/footer/facebook-icon.svg" alt="facebook"></a>
+            <a href="https://twitter.com/"><img src="icon/footer/twitter-icon.svg" alt="twitter"></a>
+            <a href="https://linkedin.com/"><img src="icon/footer/linkedin-icon.svg" alt="linkedin"></a>
         </div>
     </div>
 </footer>
