update: emplements for title

--- a/index.html
+++ b/index.html
@@ -21,35 +21,30 @@
 </header>
 <main>
     <section>
-        <div class="title-container">
-            <h1 class="title">Hi there, I’m <span class="title-consectetur">Ixartz</span>👋</h1>
+        <div class="container">
+            <div class="title-container">
+                <h1 class="title-p">Hi there, I’m <span class="title-consectetur">Ixartz</span>👋</h1>
+                <div class="title-content">
+                    <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Phasellus malesuada nisi tellus, non imperdiet nisi tempor at.</p>
+                    <p>Lorem ipsum dolor sit amet, <span class="title-consectetur">consectetur</span> adipiscing elit,</p>
+                    <p>sed do eiusmod tempor incididunt ut labore et <span class="title-consectetur">dolore</span>.</p>
+                </div>
+            </div>
+
+            <div class="western-img">
+                <img src="img/title/western-man.png" alt="Western-Man">
+            </div>
+
+        </div>
+        <div class="img-container">
+            <img src="img/title/facebook.png" alt="facebook">
+            <img src="img/title/linkedin.png" alt="linkedin">
+            <img src="img/title/twitter.png" alt="twitter">
+            <img src="img/title/youtube.png" alt="youtube">
         </div>
 
-        <div class="title-p">
-            <p>Lorem  ipsum dolor sit amet, consectetur adipiscing elit.</p>
-               <p>Phasellus malesuada nisi tellus, non imperdiet nisi tempor at.</p>
-               <p>Lorem ipsum dolor sit amet, <span class="title-consectetur">consectetur</span> adipiscing elit,</p>
-               <p>sed do eiusmod tempor incididunt ut labore et <span class="title-consectetur">dolore</span>.</p>
-        </div>
-        <div class="western-img">
-            <img src="img/title/western-man.png" alt="Western-Man">
-        </div>
 
-        <div class="twitter">
-            <img src="img/title/twitter.svg" alt="twitter">
-        </div>
-
-        <div class="facebook">
-            <img src="img/title/facebook.svg" alt="facebook">
-        </div>
-
-        <div class="linkedin">
-            <img src="img/title/linkedin.svg" alt="linkedin">
-       </div>
-
-       <div class="youtube">
-            <img src="img/title/youtube.svg" alt="youtube">
-        </div>
 
     </section>
 
