add objects emplements for title

--- a/index.html
+++ b/index.html
@@ -38,11 +38,77 @@
 
         </div>
         <div class="img-container">
+            <img src="img/title/twitter.png" alt="twitter">
             <img src="img/title/facebook.png" alt="facebook">
             <img src="img/title/linkedin.png" alt="linkedin">
-            <img src="img/title/twitter.png" alt="twitter">
             <img src="img/title/youtube.png" alt="youtube">
         </div>
+
+        <h2 class="projects">Recent <span class="title-consectetur">Projects</span></h2>
+
+
+
+           <div class="project1">
+               <div class="lamp-img">
+                   <img src="img/title/3D-illustrations-gabriel-pinheiro.com.png" alt=lamp>
+               </div>
+               <div class="design">
+                   <img src="img/title/web%20design.png" alt="Web Design"
+               </div>
+                     <div class="project-p">
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.</p>
+                         <p>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+                     </div>
+           </div>
+
+
+        <div class="project2">
+            <div class="illustration">
+                <img src="img/title/illustrations-gabriel-pinheiro.com.png" alt="3D-illustrations-gabriel-pinheiro.com.png">
+            </div>
+            <div class="next">
+                <img src="img/title/next%20js.png" alt="next js."
+            </div>
+                  <div class="project-p2">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.</p>
+                      <p>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+                  </div>
+        </div>
+
+
+        <div class="project3">
+            <div class="cup">
+                <img src="img/title/cup.png.png" alt="cup">
+            </div>
+            <div class="aweasome future">
+                <img src="img/aweasome future.png" alt="Aweasome future">
+            </div>
+            <div class="project-p3">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.</p>
+                <p>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+            </div>
+        </div>
+
+        <div class="posts">
+            <h2 class="posts">Latest<span class="title-consectetur">Posts</span></h2>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
