--- a/index.html
+++ b/index.html
@@ -44,70 +44,67 @@
             <img src="img/title/youtube.png" alt="youtube">
         </div>
 
-        <h2 class="projects">Recent <span class="title-consectetur">Projects</span></h2>
+        <h2 class="title-section">Recent <span>Projects</span></h2>
 
 
 
-           <div class="project1">
+
+        <div class="projects">
+
+           <div class="project">
                <div class="lamp-img">
                    <img src="img/title/3D-illustrations-gabriel-pinheiro.com.png" alt=lamp>
                </div>
-               <div class="design">
-                   <img src="img/title/web%20design.png" alt="Web Design"
-               </div>
+               <div class="block">
+                   <div class="pr">
+                       <p>Project 1</p>
+                   </div>
+                   <div class="design">
+                       <p><span class="liener">Web Design</span></p>
+                   </div>
                      <div class="project-p">
                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.</p>
                          <p>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
                      </div>
+               </div>
            </div>
 
-
-        <div class="project2">
-            <div class="illustration">
+        <div class="project">
+            <div class="lamp-img">
                 <img src="img/title/illustrations-gabriel-pinheiro.com.png" alt="3D-illustrations-gabriel-pinheiro.com.png">
             </div>
-            <div class="next">
-                <img src="img/title/next%20js.png" alt="next js."
-            </div>
-                  <div class="project-p2">
+            <div class="block second">
+                <div class="pr">
+                    <p>Project 2</p>
+                </div>
+                    <div class="design-red">
+                        <p><span class="liener-red">Next.js</span></p>
+                    </div>
+                  <div class="project-p">
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.</p>
-                      <p>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+                       <p>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
                   </div>
+            </div>
         </div>
 
-
-        <div class="project3">
-            <div class="cup">
+               <div class="project">
+                   <div class="lamp-img gold">
                 <img src="img/title/cup.png.png" alt="cup">
-            </div>
-            <div class="aweasome future">
-                <img src="img/aweasome future.png" alt="Aweasome future">
-            </div>
-            <div class="project-p3">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.</p>
-                <p>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+                   </div>
+            <div class="block">
+                <div class="pr third">
+                    <p>Project 3</p>
+                </div>
+                <div class="design-purple">
+                    <p><span class="liener-purple">Aweasome future</span></p>
+                </div>
+                   <div class="project-p pc">
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.</p>
+                       <p>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+                   </div>
+                 </div>
             </div>
         </div>
-
-        <div class="posts">
-            <h2 class="posts">Latest<span class="title-consectetur">Posts</span></h2>
-        </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
