--- a/index.html
+++ b/index.html
@@ -161,8 +161,29 @@
             <p class="second-text">odio id enim.</p>
         </div>
     </div>
-
 </div>
+
+    <div class="newsletters">
+        <h4 class="title-p">Subscribe to my<br><span class="title-consectetur">Newsletters</span><br></h4>
+    </div>
+
+    <div class="newsletters-p">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        <p>Phasellus malesuada nisi tellus, non imperdiet nisi tempor at.</p>
+
+    </div>
+
+    <div class="button-subscribe">
+        <div class="email">
+        <p>Enter your Email</p>
+        </div>
+        <div class="subscribe">
+            <p class="subscribe-p">Subscribe</p>
+        </div>
+    </div>
+
+
+
 
 
 <!--    <section>-->
